--- a/client-android/app/src/main/res/values/strings.xml
+++ b/client-android/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="task_title_default">Новая задача</string>
     <string name="delete">Удалить</string>
     <string name="save">Сохранить</string>
+    <string name="no_connection">Нет сети</string>
+    <string name="no_tasks">Список задач пуст</string>
 </resources>
